hphp/test/slow/readonly/locals.php.expectf
Fatal error: Cannot modify a member of a readonly variable %s on line 12
